<resources>
    <string name="app_name">晋江抄表</string>
    <string name="loginactivity_Please_enter_account">用户名</string>
    <string name="loginactivity_Please_enter_password">密码</string>
    <string name="loginactivity_Remember_password">记住密码</string>
    <string name="main_cbgl">抄表管理</string>
    <string name="main_yhcx">用户查询</string>
    <string name="main_qfcx">用水查询</string>
    <string name="main_bzcx">报装查询</string>
    <string name="main_user">我的</string>
    <string name="user_name">姓　名</string>
    <string name="user_position">职　位</string>
    <string name="user_number">工　号</string>
    <string name="user_phone">联系方式</string>
    <string name="user_area">所属区域</string>
    <string name="user_update">软件更新</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="huoqu">获取</string>
    <string name="commit">提 交</string>
    <string name="loginactivity_toast_null_password">用户名和密码不能为空</string>
    <string name="loginactivity_toast_success">登陆成功</string>
    <string name="toast_network_anomalies">网络异常，请检查网络是否连接</string>
    <string name="toast_updata_success">上传成功</string>
    <string name="toast_downing">正在下载表册中</string>
    <string name="toast_query">未查询到相关信息</string>
    <string name="toast_del_tables_success">已成功删除上个月的表册数据</string>
    <string name="toast_updata_save">存储成功</string>
    <string name="toast_upload_not_data">没有需要上传的数据</string>
    <string name="toast_back">再按一次退出应用</string>
    <string name="down_tables_success">表册清单已下载完成</string>
    <string name="down_tables_not">表册清单已经最新内容</string>
    <string name="down_tables_phone_volume_no">手机已存在表册</string>
    <string name="down_biaokuang_not">服务器不存在配置文件数据</string>
    <string name="down_biaokuang_success">配置文件已下载完成</string>
    <string name="toast_zhima_not">请输入止码</string>
    <string name="toast_error_location">请获取表位(GPS)</string>
    <string name="toast_overdue_logged_in">你的账号已在其他手机上登陆，请重新登陆...</string>
    <string name="toast_tjcx_list_not">查无信息</string>
    <string name="toast_tjcx_kh_abnormal">用户户号数据异常</string>
    <string name="toast_tjcx_search_abnormal">请输入用户户号</string>
    <string name="dialog_check_code_abnormal">输入值小于等于本期起码,请核对!</string>
    <string name="dialog_q3q_abnormal_more">水量多于前三期平均水量的30%,请核对!</string>
    <string name="dialog_q3q_abnormal_few">水量少于前三期平均水量的30%,请核对!</string>
    <string name="progress_wait">请等待...</string>
    <string name="progress_logining">登陆中，请稍后...</string>
    <string name="progress_down_biaoce">表册清单下载中，请稍后...</string>
    <string name="progress_save_biaoce">表册清单存储中，请稍后...</string>
    <string name="progress_down_biaokuang">配置文件下载中，请稍后...</string>
    <string name="progress_save_biaokuang">配置文件存储中，请稍后...</string>
    <string name="progress_upload_all">上传数据中，请稍后...</string>
    <string name="progress_search">搜索中，请稍后...</string>
    <string name="progress_loading">加载中，请稍后...</string>
    <string name="reset_old_password">请输入原始密码</string>
    <string name="reset_new_password">请输入新密码</string>
    <string name="reset_verify_password">请再次输入新密码</string>
    <string name="toast_download_fail">下载失败！</string>
    <string name="toast_download_success">下载完成！</string>
    <string name="toast_version_is_update">当前已是最新版本！</string>
    <string name="toast_version">发现新版本！</string>


    <string name="title_activity_query_details">QueryDetailsActivity</string>
    <string name="title_activity_reset">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
